# open-redatam

./: .gitignore  CMakeLists.txt  Makefile  Makefile-debug  NEWS.md  README.md  format-code.sh
.github/workflows/: build-binaries.yml  build-cpp.yml  build-mac.yml  build-pypkg.yml  build-rpkg-docker.yml  build-rpkg.yml  build-ubuntu.yml  build-unix.yml  build-windows.yml  test-windows-installer.yml  tests-mac-installer.yml  tests-ubuntu-installer.yml
dev/: 01-download-census.sh  01-install-xerces.sh  02-convert-census.sh  02-download-census.sh  03-convert-census.sh  03-test-cmd-with-valgrind.sh  03-test-with-valgrind.sh  04-compare-with-ipums.r  04-test-equivalence.r  04-test-equivalence.sh  04-test-with-valgrind.sh  05-clear-gha-workflows.r  05-test-equivalence.sh  05-ubuntu-build.sh  06-format-code.sh  06-mac-build.sh  07-test-all.sh  08-export-microdata.R  08-windows-redatam-build.ps1  09-windows-redatamgui-build.ps1  mac-distribution.xml
gui/: MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
guiwindows/: CMakeLists.txt  main.cpp
include/: XMLUtils.hpp  utils.hpp
include/database/: RedatamDatabase.hpp
include/entities/: DatabaseEntry.hpp  Entity.hpp  RedatamDatabase.hpp  Variable.hpp
include/exporters/: CSVExporter.hpp  CVSExporter.hpp  XMLExporter.hpp
include/readers/: BitArrayReader.hpp  ByteArrayReader.hpp  CursorReader.hpp  FuzzyEntityParser.hpp  FuzzyVariableParser.hpp  XMLParser.hpp
include/utils/: utils.hpp
install/: mac.sh
package/DEBIAN/: control
package/usr/share/applications/: redatamgui.desktop
pypkg/: .gitignore  MANIFEST.in  NEWS.md  README.md  main.cpp  pyproject.toml  setup.py
pypkg/redatam/: __init__.py  read_redatam.py  utils.py
pypkg/redatam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypkg/redatamlib/: ByteArrayReader.hpp  Entity.hpp  FuzzyEntityParser.cpp  FuzzyEntityParser.hpp  FuzzyVariableParser.cpp  FuzzyVariableParser.hpp  ParentIDCalculator.hpp  PyDictExporter.cpp  Variable.hpp  XMLParser.cpp  XMLParser.hpp  utils.cpp  utils.hpp
pypkg/redatamlib/database/: RedatamDatabase.cpp  RedatamDatabase.hpp
pypkg/redatamlib/entity/: Entity.hpp  RedatamDatabase.cpp  RedatamDatabase.hpp  Variable.cpp  Variable.hpp
pypkg/redatamlib/exporters/: ParentIDCalculator.cpp  ParentIDCalculator.hpp  PyDictExporter.cpp  PyDictExporter.hpp
pypkg/redatamlib/readers/: BitArrayReader.cpp  ByteArrayReader.cpp  ByteArrayReader.hpp  FuzzyEntityParser.cpp  FuzzyEntityParser.hpp  FuzzyVariableParser.cpp  FuzzyVariableParser.hpp  XMLParser.cpp  XMLParser.hpp
pypkg/redatamlib/utils/: utils.cpp  utils.hpp
pypkg/tests/: basic-test.py  ghactions.py  test.ipynb
pypkg/tests/galapagos/: cg150112.rbf  cg150120.rbf
pypkg/tests/uru2011mini/: URU2011MINI0002.rbf  URU2011MINI0003.rbf  log-dic-to-csv.txt  log-dicx-to-csv.txt
pypkg/tests/uru2011mini/dic-to-csv/: SEXO.csv
pypkg/tests/uru2011mini/dic-to-csv/Labels/: SEXO-CUENTA-LABELS.csv
pypkg/tests/uru2011mini/dicx-to-csv/: redatam_converter_description.xml
pypkg/tests/uru2011mini/dicx-to-csv/Labels/: SEXO-VARIABLES.csv  URU2011-VARIABLES.csv
redatamguiwindows/: CMakeLists.txt  installer.nsi
redatamwindows/: CMakeLists.txt
rpkg/: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README  README.md  configure  cran-comments.md
rpkg/R/: cpp11.R  read_dicx.R  read_dicx_.R  read_entity_to_df.R  read_redatam.R  redatam-package.R  tidy_dic_dicx.R  tidy_entities.R  utils.R
rpkg/dev/: chl.rds  chl2.rds  quick-test.r  valgrind-test.r
rpkg/inst/: CITATION  WORDLIST
rpkg/man/: read_redatam.Rd  redatam-package.Rd
rpkg/src/: CSVExporter.cpp  Entity.hpp  FuzzyVariableParser.cpp  FuzzyVariableParser.hpp  Makevars  Makevars.in  Makevars.win  ParentIDCalculator.cpp  RListExporter.cpp  RListExporter.hpp  RedatamDatabase.cpp  RedatamDatabase.hpp  Variable.cpp  Variable.hpp  cpp11.cpp  main.cpp  read_dic.cpp  read_ptr_rbf.cpp  read_rbf.cpp  utils.cpp  utils.hpp
rpkg/src/redatamlib/: BitArrayReader.cpp  BitArrayReader.hpp  ByteArrayReader.cpp  ByteArrayReader.hpp  Entity.cpp  Entity.hpp  FuzzyEntityParser.cpp  FuzzyEntityParser.hpp  FuzzyVariableParser.cpp  FuzzyVariableParser.hpp  ParentIDCalculator.cpp  ParentIDCalculator.hpp  RListExporter.cpp  RListExporter.hpp  RedatamDatabase.cpp  RedatamDatabase.hpp  Variable.cpp  Variable.hpp  XMLParser.cpp  XMLParser.hpp  utils.cpp  utils.hpp
rpkg/src/redatamlib/database/: RedatamDatabase.cpp  RedatamDatabase.hpp
rpkg/src/redatamlib/entities/: Entity.cpp  Entity.hpp  RedatamDatabase.cpp  RedatamDatabase.hpp  Variable.cpp  Variable.hpp
rpkg/src/redatamlib/exporters/: ParentIDCalculator.cpp  ParentIDCalculator.hpp  RListExporter.cpp  RListExporter.hpp
rpkg/src/redatamlib/readers/: BitArrayReader.cpp  BitArrayReader.hpp  ByteArrayReader.cpp  FuzzyEntityParser.cpp  FuzzyEntityParser.hpp  FuzzyVariableParser.cpp  FuzzyVariableParser.hpp  XMLParser.cpp  XMLParser.hpp
rpkg/tests/: testthat.R
rpkg/tests/testthat/: test-galapagos.R  test-uruguay.R
rpkg/vignettes/: reading-redatam-in-r.Rmd  using-redatam-in-r.Rmd
src/: XMLUtils.cpp  main.cpp  utils.cpp
src/database/: RedatamDatabase.cpp
src/entities/: Entity.cpp  RedatamDatabase.cpp  Variable.cpp
src/exporters/: CSVExporter.cpp  ParentIDCalculator.cpp  XMLExporter.cpp
src/readers/: BitArrayReader.cpp  ByteArrayReader.cpp  FuzzyEntityParser.cpp  FuzzyVariableParser.cpp  XMLParser.cpp
src/utils/: utils.cpp
test/galapagos/: cg15.dic  cg15.dicX  cg150003.ptr  cg150003.rbf  cg150004.ptr  cg150004.rbf  cg150104.rbf  log-dic-to-csv.txt  log-dicx-to-csv.txt
test/galapagos/dic-to-csv/: CANTON.csv  CG15.csv  PARROQ.csv  PROVIN.csv  redatam_converter_description.xml
test/galapagos/dicx-to-csv/: ZONA.csv  redatam_converter_description.xml
test/uru2011mini/: URU2011MINI0001.rbf  log-dic-to-csv.txt  log-dicx-to-csv.txt  uru2011mini.dic  uru2011mini.dicx
test/uru2011mini/dic-to-csv/: DEPTO.csv  redatam_converter_description.xml
test/uru2011mini/dicx-to-csv/: URU2011.csv  redatam_converter_description.xml
(+14 files in other folders)
