[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "redatam"
version = "0.1.0"
description = "A package for Redatam data conversion"
authors = [
  { name="Mauricio Vargas Sepulveda", email="m.sepulveda@mail.utoronto.ca" }
]
dependencies = [
  "pandas",
  "numpy",
  "chardet"
]
